# trend-lab-agent-ready-260610

./: README.md  pyproject.toml
src/agent_ready/: main.py
tests/: test_smoke.py
