[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "agent-ready"
version = "0.1.0"
description = "Generate lightweight agent instructions, checklists, and scorecards for a repository."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Agent Ready Contributors" }]
keywords = ["agents", "cli", "developer-tools", "repository"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]

[project.scripts]
agent-ready = "agent_ready.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
